tests/snapshots/snapshot_expansion_tests__exp_jsonl_codec_encode_hello.snap
---
source: tests/snapshot_expansion_tests.rs
expression: line
---
{"t":"hello","contract_version":"abp/v0.1","backend":{"id":"test","backend_version":null,"adapter_version":null},"capabilities":{"streaming":"native"},"mode":"mapped"}
