tests/snapshots/snapshot_expansion_tests__exp_kimi_request.snap
---
source: tests/snapshot_expansion_tests.rs
expression: req
---
{
  "model": "moonshot-v1-8k",
  "messages": [
    {
      "role": "system",
      "content": "You are Kimi."
    },
    {
      "role": "user",
      "content": "Search for Rust async patterns"
    }
  ],
  "temperature": 0.7,
  "top_p": 0.9,
  "max_tokens": 4096,
  "stream": true,
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "web_search",
        "description": "Search the web",
        "parameters": {
          "properties": {
            "query": {
              "type": "string"
            }
          },
          "type": "object"
        }
      }
    }
  ],
  "use_search": true,
  "search_options": {
    "mode": "auto",
    "result_count": 5
  }
}
