tests/snapshots/snapshot_expansion_tests__exp_kimi_response.snap
---
source: tests/snapshot_expansion_tests.rs
expression: resp
---
{
  "id": "kimi-resp-1",
  "object": "chat.completion",
  "created": 1717200000,
  "model": "moonshot-v1-8k",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "content": "Here are async patterns in Rust."
      },
      "finish_reason": "stop"
    }
  ],
  "usage": {
    "prompt_tokens": 60,
    "completion_tokens": 100,
    "total_tokens": 160,
    "search_tokens": 30
  }
}
