tests/snapshots/snapshot_expansion_tests__exp_openai_message_variants.snap
---
source: tests/snapshot_expansion_tests.rs
expression: msgs
---
[
  {
    "role": "system",
    "content": "You are helpful."
  },
  {
    "role": "user",
    "content": "Hi"
  },
  {
    "role": "assistant",
    "content": "Hello!"
  },
  {
    "role": "tool",
    "tool_call_id": "call_1",
    "content": "file contents"
  }
]
