tests/snapshots/snapshot_expansion_tests__exp_openai_request_minimal.snap
---
source: tests/snapshot_expansion_tests.rs
expression: req
---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": "Hello"
    }
  ]
}
