tests/snapshots/snapshot_expansion_tests__exp_openai_response_tool_calls.snap
---
source: tests/snapshot_expansion_tests.rs
expression: resp
---
{
  "id": "chatcmpl-tools",
  "object": "chat.completion",
  "created": 1717200000,
  "model": "gpt-4o",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "tool_calls": [
          {
            "id": "call_abc",
            "type": "function",
            "function": {
              "name": "read_file",
              "arguments": "{\"path\":\"src/lib.rs\"}"
            }
          }
        ]
      },
      "finish_reason": "tool_calls"
    }
  ],
  "usage": {
    "prompt_tokens": 50,
    "completion_tokens": 20,
    "total_tokens": 70
  }
}
