tests/snapshots/snapshot_expansion_tests__exp_policy_profile_default.snap
---
source: tests/snapshot_expansion_tests.rs
expression: "PolicyProfile::default()"
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": []
}
